It merges two redundant classes .message-box and .card in a single class .card in style.css, implement resposiveness for the section and fix overlap with the footer element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,14 +9,11 @@
 
 html,
 body {
-    height: 100%;
-}
-
-body {
     position: relative;
     font-family: Roboto Condensed, sans-serif;
     font-weight: 400;
     color: #02577a;
+    min-height: 100vh;
 }
 
 h1,
@@ -31,7 +28,7 @@ img {
     border: 10px;
     width: 300px;
     height: 20%;
-    margin: 1%;
+    margin: 0.51%;
     padding: 0;
 }
 
@@ -76,9 +73,10 @@ ol * {
     width: 100%;
     height: 100%;
     background-color: #00415a;
-    overflow: hidden;
-    display: right;
-}
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+ }
 
 .message-container {
     overflow: hidden;
@@ -107,14 +105,6 @@ ol * {
     text-align: center;
 }
 
-.one-third-width-column {
-    width: 33.33%;
-    display: inline-block;
-    padding: 10px;
-    display: center;
-    
-}
-
 .message-box {
     padding: 0px;
     border-radius: 8px;
@@ -130,8 +120,7 @@ ol * {
     flex-direction: column;
     align-items: center;
     gap: 0.5rem;
-    border: 10px solid #00b8ff;
-
+    border: 2px solid #00b8ff;
 }
 
 @media (min-width: 600px) {
@@ -146,8 +135,35 @@ ol * {
 
 .card {
     padding: 1rem;
+    width: 100%;
+    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    border-radius: 8px;
+    background-color: #e7fcfe;
+    position: relative;
+    margin: 1%;
+    
+}
+
+.schedule-card {
+    padding: 0.5rem;
+    width: 100%;
+    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    background-color: #e7fcfe;
+    position: relative;
+    margin: 0.1%;
+   
+  }
+  
+
+.card {
+    padding: 1rem;
     background: lightblue;
 }
+
 
 #flex_content {
     display: flex;
@@ -163,8 +179,7 @@ footer div {
     text-align: center;
     background-color: #e7fcfe;
     width: 100%;
-    height: 100px;
-    margin-top: -100px;
+    height: 120px;
     clear: both;
 }
 
